--- a/about.html
+++ b/about.html
@@ -133,20 +133,32 @@
 
 			<!-- <div class="desktop-12 columns"><div class="border-top"></div></div> -->
 
-
-
 			<div class="desktop-12 tablet-12 columns" >
 <!--
 				Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. -->
 
 
-					<p style="margin-top:0px;">Jake Elwes (UK), born 1993, is currently based in London. His recent works have looked at Artificial Intelligence, investigating the technology, philosophy and ethics behind it. Jake graduated with a BA in Fine Art from the Slade School of Fine Art (UCL), London in 2017, having also attended SAIC, Chicago (Erasmus), in 2016 and Central St Martins (foundation) in 2012. <br><br>Jake has exhibited in the UK and internationally, including the ZKM, Karlsruhe, Germany; Today Art Museum, Beijing, China; CyFest, Venice; Edinburgh Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany; Bloomberg New Contemporaries 2017, Newcastle & London, UK; Ars Electronica 2017, Linz, Austria; Victoria and Albert Museum, London; City Loop, Barcelona; Nature Morte, Delhi, India and the Centre for the Future of Intelligence (CFI), Cambridge, UK. </p>
+					<p style="margin-top:0px;">Jake Elwes (UK), born 1993, is currently based in London. His recent works have looked at machine learning and artificial intelligence research, investigating the technology, philosophy and ethics behind it. Jake graduated with a BA in Fine Art from the Slade School of Fine Art (UCL), London in 2017, having also attended SAIC, Chicago (Erasmus), in 2016 and Central St Martins (foundation) in 2012. <br><br>Jake has exhibited in the UK and internationally, including the ZKM, Karlsruhe, Germany; Today Art Museum, Beijing, China; CyFest, Venice; Edinburgh Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany; Bloomberg New Contemporaries 2017, Newcastle & London, UK; Ars Electronica 2017, Linz, Austria; Victoria and Albert Museum, London; City Loop, Barcelona; Nature Morte, Delhi, India and the Centre for the Future of Intelligence (CFI), Cambridge, UK. </p>
 
 
 
 
 					<!-- <br>Download: <a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a> -->
 					<br>Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a>
+<br><br>
+						<a id=show target="_blank" href="http://www.contemporaryartsociety.org/news/artist-to-watch/jake-elwes/">Contemporary Art Socierty</a> |
+						<a id=show target="_blank" href="https://zkm.de/en/person/jake-elwes">ZKM</a> |
+						<a id=show target="_blank" href="https://aiartists.org/jake-elwes">AI Artists</a> |
+						<a id=show target="_blank" href="https://www.newcontemporaries.org.uk/2017/artists/jake-elwes">New Contempories</a> |
+						<a id=show target="_blank" href="https://www.zabludowiczcollection.com/exhibitions/view/zabludowicz-collection-invites-jake-elwes">Zabludowicz</a> |
+						<a id=show target="_blank" href="https://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes">Slade School of Fine Art, UCL</a> |
+						<a id=show target="_blank" href="https://ars.electronica.art/ai/en?s=jake+elwes">Ars Electronica</a> |
+						<a id=show target="_blank" href="https://www.artrabbit.com/people/jakeelwes/artist">Art Rabbit</a> |
+						<a id=show target="_blank" href="https://www.fkv.de/en/jake-elwes/">Frankfurter Kunstverein</a> |
+						<a id=show target="_blank" href="https://beyondconference.org/speakers/jake-elwes/">Beyond Conference</a> |
+						<a id=show target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Edinburgh Futures Institute</a>
+
+
 			</div>
 		</div><!-- // .container -->
 
@@ -171,9 +183,12 @@
 						<b>Central St Martins (UAL)</b>, Foundation 2012-13 <br><br>
 						<b>The Artist Development Agency</b>, Steve Fletcher (formally Carroll / Fletcher Gallery, London) 2017-19<br>
 					</p>
+					</p>
+
 					</div><!-- // .desktop-6 -->
 
 					<div class="clear"></div>
+
 				</div><!-- // .item -->
 
 					<div class="item">
@@ -287,8 +302,16 @@
 								ZKM | Center for Art and Media, Karlsruhe<br>
 								Zabludowicz Collection, London<br>
 								<!-- Highest Pre-U Result in Fine Art UK (A Level, Cambridge International Examinations), 2012<br> -->
+								<br>
 
 						</p>
+						<h4>Television</h4>
+						<p>
+							BBC FOUR; <a id=show target="_blank" href="https://www.bbc.co.uk/iplayer/episode/m000bpjw/kill-your-tv-jim-moirs-weird-world-of-video-art">'Kill Your TV: Jim Moir’s Weird World Of Video Art'</a> Sunday 24 November 2019
+							<br>
+							<!-- Highest Pre-U Result in Fine Art UK (A Level, Cambridge International Examinations), 2012<br> -->
+
+					</p>
 
 						</div>
 
