--- a/project-cusp.html
+++ b/project-cusp.html
@@ -152,7 +152,12 @@
 					<img src="images/project-cusp/5.jpg" style="width:52%;" alt="CUSP 2019 - Jake Elwes digital artist" />
 					<small>Four stills of generated birds  /  On Location in the Essex marshes</small>
 
-					<br><br>
+
+					<br>
+					<img src="images/project-cusp/TBB_9126.jpg" style="width:49%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+					<img src="images/project-cusp/TBB_9119.jpg" style="width:49%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+					<small>Installation views: Zabludowicz Collection, London (Photo Tim Bowditch) | Museum für Naturkunde, Berlin</small>
+					<br>
 
 					<!-- <iframe id="vid2" src="https://player.vimeo.com/video/351045765?color=ffffff&loop=1&title=0&byline=0&portrait=0" width="260" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
