--- a/index.html
+++ b/index.html
@@ -157,11 +157,22 @@
 					<div class="item">
 						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Zizi (work in progress - <a id=show target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a>)</h3>
-						<span class="category">2019 -</span>
+						<h3 style="color: #999;">Zizi Projects - Upcoming</h3>
+						<span class="category" style="color: #999;">2020 (work in progress)</span>
 					</div>
 				</div>
 			<!-- </a> -->
+
+			<a href="project-zizi19.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Zizi - Queering the Dataset</h3>
+						<span class="category">2019</span>
+					</div>
+				</div>
+			</a>
 
 
 			<a href="project-cusp.html" class="permalink">
@@ -176,6 +187,9 @@
 			</a>
 
 
+			<div class="clear hide-under-tablet"></div>
+
+
 			<a href="project-latentSpace.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -187,7 +201,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-closedLoop.html" class="permalink">
@@ -213,6 +226,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 
 
@@ -228,7 +242,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-AutoEncodedBuddha.html" class="permalink">
@@ -255,6 +268,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-digitalTouch.html" class="permalink">
@@ -267,7 +281,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-circuit.html" class="permalink">
@@ -294,6 +307,7 @@
 		</div><!-- // .desktop-4 -->
 	</a>
 
+	<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-pornCircles.html" class="permalink">
@@ -320,7 +334,6 @@
 			</a>
 
 
-			<div class="clear hide-under-tablet"></div>
 
 			<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
 
