--- a/project-zizi19.html
+++ b/project-zizi19.html
@@ -100,9 +100,9 @@
 
 								<br>
 								<small>
-								Instagram <a id="show" target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning generated captions and looks trained on drag profiles.<br>
+								Instagram <a id="show" target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning generated captions and looks trained on drag profiles.
 
-								Presented as site specific video installation with between 3 and 10 channels. <br>Zizi was originally commissioned as a seven channel installation by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> and Inspace.</small>
+								 <br>Zizi was originally commissioned as a seven channel video installation by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> and Inspace. <br> Presented as site specific video installation with between 3 and 10 projected video channels.</small>
 
 						</div><!-- // .box-info -->
 
