--- a/news.html
+++ b/news.html
@@ -409,7 +409,8 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 
 			<!-- InstaWidget -->
 			<!-- InstaWidget -->
-<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/5079144a8550595fbb9bbcdbf9e54d7e.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>		<script src="https://instawidget.net/js/instawidget.js?u=262e67976584f45ccec89836866f7b8f6695c518469bc5b61e10f0534cd26968&width=100%"></script>
+			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+			<div class="elfsight-app-51ce5241-d990-4a8e-953a-9d4c95964c2e"></div>
 		<a class="twitter-timeline" data-width="100%" data-height="500" data-theme="light" data-link-color="#19CF86" href="https://twitter.com/JakeElwes">Tweets by JakeElwes</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 		</div><!-- // .box-content -->
