--- a/project-zizi19.html
+++ b/project-zizi19.html
@@ -90,12 +90,12 @@
 </p>
 
 							<p>
-								Zizi is a procession of faces of drag artists in constant transition generated from data using machine learning. Drag is a celebration of gendered and sexual otherness. It's loud, bold and beautiful. Zizi’s gender, sexuality, whether they are real or artificial, is all uncertain.
-								<br><br>
+								Zizi is a procession of faces of drag artists in constant transition generated from data using machine learning. Drag is a queer performance form that celebrates and challenges gender and otherness. It's loud, bold and beautiful. Zizi’s gender, identity, race, whether they are real or artificial, is all uncertain.
+							</p><p>
 								Zizi tackles head-on the lack of representation in the training datasets often used by facial recognition systems. Zizi disrupts these systems by retraining them with the addition of drag and gender fluidity.
-								<br><br>
+							</p><p>
 								The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. If AI holds a mirror up to society, then Zizi applies the makeup.
-								<br>
+							</p>
 								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/"> - Read full curatorial text by Drew Hemment.<br></a>
 
 								<br>
