--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -95,9 +95,9 @@
 								Zizi tackles head-on the lack of representation in the training datasets often used by facial recognition systems. Zizi disrupts these systems by retraining them with the addition of drag and gender fluidity.
 							</p><p>
 								The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. If AI holds a mirror up to society, then Zizi applies the makeup.
-							</p>
-								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/"> - Read full curatorial text by Drew Hemment.<br></a>
-
+</p><p>
+								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read curatorial text by Drew Hemment.<br></a>
+</p>
 								<br>
 								<small>
 								Instagram <a id="show" target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning generated captions and looks trained on drag profiles.
