--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Jake Elwes</title>
-	<meta name="description" content="Artworks by Jake Elwes - investigating the role of technology in modern life. Jake is a UK based new media/digital artist. His recent works have looked at Artificial Intelligence, investigating the technology, philosophy and ethics behind it.">
+	<meta name="description" content="Artworks by Jake Elwes, based in London. Recent works have looked at AI & machine learning, investigating the technology, philosophy and ethics behind it.">
 	<meta name="author" content="Jake Elwes">
 
 	<!-- Mobile Specific Metas
