--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -96,7 +96,7 @@
 							</p><p>
 								The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. If AI holds a mirror up to society, then Zizi applies the makeup.
 </p><p>
-								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read curatorial text by Drew Hemment.<br></a>
+								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read full curatorial text by Drew Hemment.<br></a>
 </p>
 								<br>
 								<small>
