--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -85,8 +85,8 @@
 							<h3 class="border-top">Machine learning porn</h3>
 							<p class="project-desc">2016, digital video, 12 minute loop</p>
 							<p>
-							Inspiration from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>.<br>A convolutional neural network was trained using Yahoo’s explicit content model for identifying pornography, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
-<br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.
+							<br>A convolutional neural network was trained using Yahoo’s explicit content model for identifying pornography, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
+<br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies. <br>Inspiration taken from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>, the machine learning researcher who originally discovered the technique.
 						</p>
 						</div><!-- // .box-info -->
 
