--- a/news.html
+++ b/news.html
@@ -345,7 +345,7 @@ In 2007 the Collection opened its main exhibition space in London, in a 19th Cen
 <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/">‘Gradient Descent’</a> was curated by <a id=show target="_blank" href="https://www.64bar1.com/"> 64/1</a>, an art curation and research collective focused on building public understanding of how artists and artificial intelligence can come together to create art for the post-human age. 64/1 was founded by Raghava KK and Karthik Kalyanaraman out of Bangalore, India.
 <br>
 <br>
-I had an wonderful week meeting Indian politicians, officials, artists and academics. I spoke on a panel about my art process and collaborating with a machine at an INK talk (Indian equivalent of TED). It was such a pleasure to be invited out by Raghava and Karthik having discussions with them and the other artists about our inspirations and the future. <br><br>
+I had an wonderful week meeting artists, academics and policy makers. I spoke on a panel about my art process and collaborating with a machine at an INK talk. It was such a pleasure to be invited out by Raghava and Karthik having discussions with them and the other artists about our inspirations and the future. <br><br>
 Press: <a id=show target="_blank" href="https://news.artnet.com/exhibitions/ai-generated-art-gallery-show-1339445"> Artnet, </a><a id=show target="_blank" href="https://www.google.co.uk/search?ei=QPGYW9aaD-yagAa824roDQ&q=site%3Aft.com+An+AI+genre+in+its+infancy+questions+the+nature+of+art">Financial Times, </a><a id=show target="_blank" href="https://www.vogue.in/content/is-artificial-intelligence-the-new-artist-we-need-to-watch-out-for/">Vogue India, </a><a id=show target="_blank" href="http://www.forbesindia.com/aperture/slideshow/artificial-intelligence-art-parenting-a-new-genre/51059/1">Forbes India, </a><a id=show target="_blank" href="https://www.thehindu.com/entertainment/art/the-poetics-of-metonymy/article24769019.ece">The Hindu, </a><a id=show target="_blank" href="https://www.fastcompany.com/90233582/ai-is-their-paintbrush-but-the-artwork-is-no-less-human">Fastcompany</a>
 <br><br>
 </p>
@@ -364,10 +364,10 @@ Press: <a id=show target="_blank" href="https://news.artnet.com/exhibitions/ai-g
 						<img src="images/news/BNC5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
 
 
-            <p> Jake has been selected to show work at this years <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes">New Contempories</a>. "New Contemporaries is the leading organisation supporting emergent art practice from UK art schools. Since 1949 New Contemporaries has consistently provided a critical platform for new and recent fine art graduates primarily by means of an annual, nationally touring exhibition.
+            <p> I'm delighted to have been selected to show work at this years <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes">New Contempories</a>. "New Contemporaries is the leading organisation supporting emergent art practice from UK art schools. Since 1949 New Contemporaries has consistently provided a critical platform for new and recent fine art graduates primarily by means of an annual, nationally touring exhibition.
 							<br>
 							<br>
-              Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses artists such as Frank Auerbach, Paula Rego, David Hockney, Damien Hirst, Tacita Dean, Mark Lecky, Ed Atkins, Marvin Gaye Chetwynd and Rachel Maclean have all been selected.
+              Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses artists such as Frank Auerbach, Paula Rego, David Hockney, Damien Hirst, Tacita Dean, Mark Lecky, Ed Atkins, Marvin Gaye Chetwynd and Rachel Maclean.
 							<br>
 							<br>
 For the first time the national touring exhibition will launch at BALTIC Centre for Contemporary Art, Gateshead and BALTIC’s project space at BALTIC 39, Newcastle upon Tyne from 29 September to 26 November 2017. The exhibition will then travel to Block 336, London, from 27 January to 3 March 2018." - <a id=show href="http://www.newcontemporaries.org.uk/">newcontempories.com</a></p>
@@ -385,8 +385,8 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 						<img src="images/news/Ars4.jpg" width="48%" alt="Jake Elwes digital artist" />
 						<small>Image credits: Ars Electronica, Tom Mesic &amp; Florian Voggeneder</small>
 
-						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence, Elwes was invited to show four pieces as part of the festival, <a id=show href="https://www.aec.at/ai/en/latent-space/">Latent Space</a>, <a id=show href="https://www.aec.at/ai/en/closed-loop/">Closed Loop</a> and <a id=show href="https://www.aec.at/ai/en/machine-learning-porn/">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
-              Jake is also going to give a talk and is showing <a id=show href="project-DaDaTa.html">Dadada Ta</a> with the Artist Development Agency.
+						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence, I was invited to show four pieces as part of the festival, <a id=show href="https://www.aec.at/ai/en/latent-space/">Latent Space</a>, <a id=show href="https://www.aec.at/ai/en/closed-loop/">Closed Loop</a> and <a id=show href="https://www.aec.at/ai/en/machine-learning-porn/">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
+              I will also be giving a talk and will show <a id=show href="project-DaDaTa.html">Dadada Ta</a> with the Artist Development Agency.
 <br>
 <br>
  "Art, technology, society. Since 1979, Ars Electronica has sought out interlinkages and congruities, causes and effects. The ideas circulating here are innovative, radical, eccentric in the best sense of that term. They influence our everyday life—our lifestyle, our way of life, every single day.
