--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -105,7 +105,7 @@
 “The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br>
 
 
-								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>, and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a> (New York based creative technologist and collaborator), and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 </p>
 						</div><!-- // .box-info -->
