--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -73,11 +73,11 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
+			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h3 class="border-top">Auto-Encoded Buddha</h3>
@@ -103,13 +103,18 @@
 			<div class="clear show-under-tablet"></div>
 
 
-			<div id="budd" class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
+
+
+					<img src="images/project-AutoEncodedBuddha/1.JPG" width="100%" alt="Jake Elwes digital artist" />
+					<div id="budd"></div>
+
 
 				  <script>
 
 				  var rand = Math.floor((Math.random() * 17) + 1);
 				  var src = 'images/project-AutoEncodedBuddha/gifs/' + rand + '.gif'
-				  $("#budd").prepend('<img id="gif" src="'+ src +'" width="70%" height="100%"/>')
+				  $("#budd").prepend('<img id="gif" src="'+ src +'" width="100%" height="100%"/>')
 				  // $('body').prepend('<img id="gif2" src="'+ src +'" width="100%" height="100%"/>')
 
 
@@ -130,13 +135,6 @@
 				}, 1920);
 
 				  </script>
-
-					<img src="images/project-AutoEncodedBuddha/1.JPG" width="70%" alt="Jake Elwes digital artist" />
-					<img src="images/project-AutoEncodedBuddha/2.JPG" alt="Jake Elwes digital artist" />
-					<!-- <img src="images/project-AutoEncodedBuddha/3.JPG" width="70%"alt="Jake Elwes digital artist" />
-					<img src="images/project-AutoEncodedBuddha/4.JPG" width="70%"alt="Jake Elwes digital artist" />
-					<img src="images/project-AutoEncodedBuddha/5.JPG" width="70%"alt="Jake Elwes digital artist" />
-					<img src="images/project-AutoEncodedBuddha/6.JPG" alt="Jake Elwes digital artist" /> -->
 
 			</div><!-- // .desktop-0 -->
 
