--- a/news.html
+++ b/news.html
@@ -239,7 +239,7 @@
 
 						<p>
 
-							I’m delighted that my work Closed Loop 2017 has joined the permanent collection at the ZKM | Center for Art and Media, Karlsruhe, Germany.
+							I’m delighted that <a id=show target="_blank" href="project-closedLoop.html">Closed Loop 2017</a> has joined the permanent collection at the ZKM | Center for Art and Media, Karlsruhe, Germany.
 							<br>
 							<br>
 							"In an extraordinary compilation, ZKM presents the main works from its globally unique collection. The collection of the ZKM | Karlsruhe ranks among the largest media art collections in the world. It exemplifies the transformation of art in the face of changing technologies of production, reception, and distribution. Artists react to changes in media  and sometimes anticipate developments that only years later will be taken for granted by society as a whole: they write the history of the future.
@@ -275,7 +275,7 @@
 
 						<p>
 
-							My work CUSP 2019 was showing as part of CYFEST which opened as an off site exhibition during the Venice Biennale.
+							CUSP 2019 was showing as part of CYFEST which opened as an off site exhibition during the Venice Biennale.
 							<br>
 							<br>
 							“CYLAND MediaArtLab in collaboration with Centre of Studies of Russian Art CSAR presents the exhibition ID. ART:TECH. 
