--- a/about.html
+++ b/about.html
@@ -309,6 +309,8 @@ Tom Mouna (2019). <b>Mining the machine Long Xinru</b>. Hong Kong: ArtAsiaPacifi
 
 Marykate Regan (2019). <b>Generative Adversarial Networks & The Art Market</b> New York: Fashion Institute of Technology Publishing.<br>
 
+Irini Papadimitriou (2018). <b>Artificially Intelligent</b> London: Victoria &amp; Albert Museum<br>
+
 Hannes Leopoldseder, Christine Schöpf, Gerfried Stocker (2017).<b>Ars Electronica 2017</b>.<br>
 
 Caroline Achaintre, Elizabeth Price, and George Shaw (2017).<b>Bloomberg New Contemporaries 2017</b>. New Contemporaries (1988) Ltd.<br>
