--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
 
 						<h3 style="color: #999;">Zizi Projects - Upcoming</h3>
-						<span class="category" style="color: #999;">2020 (work in progress)</span>
+						<span class="category" style="color: #999;">multiple, 2020 (work in progress)</span>
 					</div>
 				</div>
 			<!-- </a> -->
@@ -169,7 +169,7 @@
 						<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Zizi - Queering the Dataset</h3>
-						<span class="category">2019</span>
+						<span class="category">video, 2019</span>
 					</div>
 				</div>
 			</a>
@@ -181,7 +181,7 @@
 						<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>CUSP</h3>
-						<span class="category">2019</span>
+						<span class="category">video, 2019</span>
 					</div>
 				</div>
 			</a>
@@ -196,7 +196,7 @@
 						<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Latent Space</h3>
-						<span class="category">2017</span>
+						<span class="category">video, 2017</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -209,7 +209,7 @@
 						<img src="images/project-closedLoop.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Closed Loop</h3>
-						<span class="category">2017</span>
+						<span class="category">installation, 2017</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -221,7 +221,7 @@
 						<img src="images/project-DaDaTa.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>dada da ta</h3>
-						<span class="category">2016</span>
+						<span class="category">video, 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -237,7 +237,7 @@
 						<img src="images/project-digitalWhisper.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Digital Whispers</h3>
-						<span class="category">2016</span>
+						<span class="category">installation, 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -250,7 +250,7 @@
 						<img src="images/project-AutoEncodedBuddha.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Auto-Encoded Buddha</h3>
-						<span class="category">2016</span>
+						<span class="category">installation, 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -263,7 +263,7 @@
 						<img src="images/project-MLPorn.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Machine Learning Porn</h3>
-						<span class="category">2016</span>
+						<span class="category">video, 2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -277,7 +277,7 @@
 						<img src="images/project-digitalTouch.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Digital Caress</h3>
-						<span class="category">2015</span>
+						<span class="category">print, 2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -289,7 +289,7 @@
 						<img src="images/project-circuit.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Solid State</h3>
-						<span class="category">2015</span>
+						<span class="category">print, 2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -302,7 +302,7 @@
 				<img src="images/project-iPhoneTouch.jpg" alt="Jake Elwes digital artist" />
 
 				<h3>Behind The Screen</h3>
-				<span class="category">2015</span>
+				<span class="category">app, 2015</span>
 			</div><!-- // .item -->
 		</div><!-- // .desktop-4 -->
 	</a>
@@ -316,7 +316,7 @@
 						<img src="images/project-pornCircles.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Porn Saturation</h3>
-						<span class="category">2015</span>
+						<span class="category">print, 2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -328,7 +328,7 @@
 						<img src="images/project-lineForWalk.jpg" alt="Jake Elwes digital artist" />
 
 						<h3>Taking a Phone for a Walk</h3>
-						<span class="category">2015</span>
+						<span class="category">print & app, 2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
