latent space update

--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -90,8 +90,16 @@
 </p>
 
 							<p>
-								What happens when an AI algorithm that has been trained to generate humanly recognisable original images is freed to create images at will? Latent Space is a video snap-shot of a generative adversarial neural network, an AI algorithm trained using 14.2 million photographs, continuously producing new images – a digital subconscious conceiving of new images and visualising a ‘latent space’.
-								<br><br><small> Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+								<!-- What happens when an AI algorithm that has been trained to generate humanly recognisable original images is freed to create images at will? Latent Space is a video snap-shot of a generative adversarial neural network, an AI algorithm trained using 14.2 million photographs, continuously producing new images – a digital subconscious conceiving of new images and visualising a ‘latent space’. -->
+								In artificial intelligence ‘Latent Space’ refers to a mathematical space which maps what a neural network has learnt from training images. Once it has been trained it understands all images of trees as existing in a specific area, and all images of birds in another.<br><br>
+
+								The neural network can be reverse engineered to create fake images from these coordinates<small><sub>1</sub></small>. But what if it was given a new path to travel between these recognisable points, and instead moves through the in-between space?<br><br>
+
+								Latent Space is a video snap-shot of an A.I. algorithm trained using 14.2 million photographs<small><sub>2</sub></small> continuously producing new images. <br><br>
+
+								<small>1) Plug & Play Generative Networks, 2019<br>
+								2) ImageNet: A Large-Scale Hierarchical Image Database, 2009
+								<br><br>Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their research.</small>
 
 						</div><!-- // .box-info -->
 
@@ -129,13 +137,15 @@
 
 
 					<br>
+					<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
 
 					<!-- <img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" /> -->
 					<!-- <img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" /> -->
 					<!-- <img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" /> -->
-					<img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" />
+					<!-- <img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" /> -->
 					<!-- <small> Installation shot from Slade Degree Show, 2017</small> -->
 					<!-- <img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" /> -->
+					<br><br>
 					<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
 					<br>
 					<small><a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017</small>
@@ -143,7 +153,6 @@
 					<br>
 
 					<!-- <img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" /> -->
-					<!-- <img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" /> -->
 
 					<!-- computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
